--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Addequa</title>
   </head>
   <body>
-    <div id="box"></div>
+    <div id="box-wrapper">
+      <div id="box"></div>
+    </div>
     <img src="./assets/logo.png" />
   </body>
 </html>
